partial view update

--- a/Fixxo-MVC-App/Views/Home/Index.cshtml
+++ b/Fixxo-MVC-App/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-<partial name="Partials/_HeaderPartial" />
+@{
+	ViewData["CollectionTitle"] = "Featured Products";
+}
+
 <partial name="Partials/_ShowcasePartial"/>
-<partial name="Partials/_CollectionItemPartial"/>
+<partial name="Partials/_CollectionPartial"/>
 <partial name="Partials/_SpecialOffersPartial"/>
-<partial name="Partials/_FooterPartial"/>
+<partial name="Partials/_TwoColumnCollectionPartial"/>
