--- a/Fixxo-MVC-App/Views/Shared/Partials/_CollectionPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_CollectionPartial.cshtml
@@ -1,15 +1,15 @@
 <section class="collection-grid">
-    <div class="container">
-        <div class="title">@ViewData["Title"]</div>
-        <div class="item-collection">
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-            <partial name="_CollectionItemPartial"/>
-        </div>
-    </div>
+	<div class="container">
+		<div class="title">@ViewData["CollectionTitle"]</div>
+		<div class="item-collection">
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+		</div>
+	</div>
 </section>
