--- a/Fixxo-MVC-App/Views/Shared/Partials/_CollectionItemPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_CollectionItemPartial.cshtml
@@ -1,19 +1,25 @@
 <div class="item">
-    <div class="image-section">
-        <img src="https://kyhnet22sa.blob.core.windows.net/product-images/black-coat.png" alt="" />
-        <div class="menu">
-            <div class="icons">
-                <button class="link"><i class="fa-regular fa-code-compare"></i></button>
-                <button class="link"><i class="fa-regular fa-heart"></i></button>
-                <button class="link"><i class="fa-regular fa-bag-shopping"></i></button>
-            </div>
-            <a class="btn-theme" to="/products">QUICK VIEW</a>
-        </div>
-    </div>
-    <div class="body-section">
-        <div class="category">Coats</div>
-        <div class="name">Black Coat of the Best Brand And Design</div>
-        <partial name="_StarRatingPartial.cshtml"/>
-        <div class="price">$3500</div>
-    </div>
+	<div class="image-section">
+		<img src="~/images/black_coat.png" alt="" />
+		<div class="menu">
+			<div class="icons">
+				<button class="link">
+					<i class="fa-regular fa-code-compare"></i>
+				</button>
+				<button class="link">
+					<i class="fa-regular fa-heart"></i>
+				</button>
+				<button class="link">
+					<i class="fa-regular fa-bag-shopping"></i>
+				</button>
+			</div>
+			<a class="btn-theme">QUICK VIEW</a>
+		</div>
+	</div>
+	<div class="body-section">
+		<div class="category">Coats</div>
+		<div class="name">Black Long Coat of the Best Brand and Design</div>
+		<partial name="~/Views/Shared/Partials/_StarRatingPartial.cshtml" />
+		<div class="price">$3500</div>
+	</div>
 </div>
