--- a/Fixxo-MVC-App/Views/Shared/_Layout.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/_Layout.cshtml
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 </head>
 <body>
-
+        <partial name="Partials/_HeaderPartial"/>
         @RenderBody()
+        <partial name="Partials/_FooterPartial"/>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
