--- a/Fixxo-MVC-App/Views/Shared/Partials/_FooterPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_FooterPartial.cshtml
@@ -1,4 +1,4 @@
-<footer>
+<footer class="mt-1">
     <div class="container mb-4">
         <i class="fa-brands fa-facebook-f me-3 fa-lg"></i>
         <i class="fa-brands fa-instagram me-3 fa-lg"></i>
