--- a/Fixxo-MVC-App/Views/Shared/Partials/_HeaderPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_HeaderPartial.cshtml
@@ -1,12 +1,11 @@
 <header>
     <div class="container">
         <a id="logotype" href="/">Fixxo.</a>
-            
         <div id="menu" class="">
             <nav class="menu-links links">
                 <a class="link" href="/">Home</a>
                 <a class="link" href="/products">Products</a>
-                <a class="link" href="/contacts">Contacts</a>
+                <a class="link" href="/contact">Contact us</a>
             </nav>
             <nav class="menu-icons icons">
                 <a class="link" href="/search"><i class="fa-regular fa-search"></i></a>
