--- a/Fixxo-MVC-App/Views/Admin/Index.cshtml
+++ b/Fixxo-MVC-App/Views/Admin/Index.cshtml
@@ -27,6 +27,11 @@
                 <label asp-for="Tag" class="form-label"></label>
                 <input asp-for="Tag" class="form-control"/>
             </div>
+            <div class="mb-3">
+                <label asp-for="StarRating" class="form-label"></label>
+                <input asp-for="StarRating" class="form-control"/>
+            </div>
+            
             <div class="d-grid">
                 <button type="submit" class="btn btn-success">Create Product</button>
             </div>
