--- a/Fixxo-MVC-App/Views/Shared/Partials/_HeaderPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_HeaderPartial.cshtml
@@ -4,7 +4,7 @@
         <div id="menu" class="">
             <nav class="menu-links links">
                 <a class="link" href="/">Home</a>
-                <a class="link" href="/products">Products</a>
+                <a class="link" href="/products/index">Products</a>
                 <a class="link" href="/contact">Contact us</a>
             </nav>
             <nav class="menu-icons icons">
