--- a/Fixxo-MVC-App/Views/Shared/Partials/_CollectionPartial.cshtml
+++ b/Fixxo-MVC-App/Views/Shared/Partials/_CollectionPartial.cshtml
@@ -1,15 +1,13 @@
+@model IEnumerable<Fixxo_MVC_App.Models.CollectionItemModel>
+
 <section class="collection-grid">
 	<div class="container">
 		<div class="title">@ViewData["CollectionTitle"]</div>
 		<div class="item-collection">
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
-			<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" />
+			@foreach(var product in Model)
+			{
+				<partial name="~/Views/Shared/Partials/_CollectionItemPartial.cshtml" model="product"/>
+			}
 		</div>
 	</div>
 </section>
